# akaze_orb_Vs

./: README.md  huiben2_0.sln
Debug/: dsplib.lib  test_main.ilk  tran.ilk  tworb.lib
Server2.1/: .gitignore  CMakeLists.txt  matchDestination_main.cpp  trainTemplate_main.cpp  版本更改说明.txt
Server2.1/pc_dsplib/: pc_dsplib.h
Server2.1/test/: CMakeLists.txt
Server2.1/test/trainDemo/: CMakeLists.txt  main.cpp
Server2.1/test/tranBookDemo/: CMakeLists.txt  Readme.md  tranBook.cpp
Server2.1/test/xxhash/: CMakeLists.txt  example.c
Server2.1/trainTemplate/: helper.cpp  helper.h  tran.cpp  tran.h
dsplib/: ReadMe.txt  dsplib.vcxproj  dsplib.vcxproj.filters
dsplib/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc110.idb
source/dsplib/: c_bmp.cpp  hanmmingmatch.cpp  huiben.cpp  huiben.h  identifyPictures.cpp  identifyPictures.h  mkdir_io.c  tw_tpyedef.h
source/test_main/: testmain.cpp  testmain.h
test_main/: test_main.vcxproj  test_main.vcxproj.filters
test_main/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
tran/: ReadMe.txt  tran.vcxproj  tran.vcxproj.filters
tran/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
tran/Server/: matchDestination_main.cpp  trainTemplate_main.cpp
tran/Server/pc_dsplib/: pc_dsplib.h  tw_tpyedef.h
tran/pc_test/: ImageConverter.cpp  Imagehalfsample.cpp  c_bmp.cpp  matchWithImageshow.cpp
twakaze/: ReadMe.txt  twakaze.vcxproj  twakaze.vcxproj.filters
twakaze/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc110.idb
tworb/: ReadMe.txt  tworb.vcxproj  tworb.vcxproj.filters
tworb/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  tworb.lastbuildstate  vc110.idb
